--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "npm": "^11.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "run": "^1.5.0"
+    "react-router-dom": "^7.8.0",
+    "run": "^1.5.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
