--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "npm": "^11.5.2",
     "radix-ui": "^1.4.2",
     "react": "^19.1.1",
@@ -28,6 +30,7 @@
     "react-router-dom": "^7.8.0",
     "run": "^1.5.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.17"
   },
